# decorules

./: .gitignore  LICENSE  README.md  pyproject.toml
.run/: pytest for tests.run.xml  pytest for tests.test_decs (1).run.xml  pytest for tests.test_decs.run.xml  pytest in test_decs.py.run.xml
decorules/: decorules_decs.py  decorules_preds.py  decorules_utils.py  has_enforced_rules.py
src/: __init__.py
src/decorules/: decorators.py  has_enforced_rules.py  has_rules_actions.py  predicates.py  utils.py
src/example/: client_class.py  library_class.py
tests/: test_decs.py
